# nusiq-project-template

./: .gitignore  LICENSE  README.rst  changelog.md  setup.cfg
src/nusiq_project_template/: __init__.py
