[metadata]
name = nusiq-project-template
author = Nusiq
version = attr: nusiq_project_template.VERSION
description = Python module with a script for generating new projects of any kind with a predefined structure.
long_description = file: README.rst, LICENSE
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
package_dir =
    =src
packages = find:
install_requires =
    better-json-tools ~=1.0,>=1.0.3
    regolith-json-template~=1.0
    appdirs ~=1.4

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
where = src
# The script:
[options.entry_points]
console_scripts =
    project-template = nusiq_project_template:main

[options.package_data]
nusiq_project_template = py.typed
